# globalping-cli

./: .editorconfig  .eslintrc.cjs  .gitignore  .goreleaser.choco.yaml  .goreleaser.yaml  CONTRIBUTING.md  Cargo.toml  README.md  go.mod  go.sum  justfile  main.go  package-lock.json  package.json  tsconfig.json
api/: auth.go  auth_test.go  client.go  limits.go  measurements.go  measurements_test.go  post-model.go  utils_test.go
cli/: Cargo.toml
cli/src/: lib.rs
client/: client.go  client_test.go  measurements_fetcher.go  measurements_fetcher_test.go  user_agent.go  user_agent_test.go  view.go  view_test.go
cmd/: auth.go  auth_test.go  common.go  common_test.go  dns.go  dns_test.go  history.go  history_test.go  http.go  http_test.go  install_probe.go  install_probe_test.go  limits.go  limits_test.go  mtr.go  mtr_test.go  ping.go  ping_test.go  root.go  root_test.go  traceroute.go  traceroute_test.go  utils_test.go  version.go  version_test.go
core/: Cargo.toml
globalping/: auth.go  auth_test.go  client.go  globalping.go  globalping_test.go  limits.go  limits_test.go  measurements.go  measurements_test.go  models.go  utils_test.go
lib/: target_query.go  target_query_test.go
mocks/: gen_mocks.sh  mock_client.go  mock_globalping.go  mock_measurements_fetcher.go  mock_probe.go  mock_time.go  mock_utils.go  mock_viewer.go
model/: get.go  post.go  root.go  root_test.go  view.go
packagecloud/: main.go
snap/: snapcraft.yaml
src/: api.ts  cli.ts  parse.ts  render.ts  types.ts  utils.ts
storage/: config.go  config_test.go  history.go  history_test.go  measurements.go  migrations.go  (+4 more)
(+39 files in other folders)
