[package]
name = "globalping-cli"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/jsdelivr/globalping-cli"
readme = "README.md"
license = "MIT"
keywords = ["cli"]
description = """
A simple CLI tool to run networking commands remotely on hundreds of globally distributed servers.
"""

[workspace]
members = [
    "utils",
    "cli",
    "core",
]

[features]
nightly = ["utils/nightly"]
termlog = ["utils/termlog"]
journald = ["utils/journald"]
syslog = ["utils/syslog"]

[dependencies]
utils = { path = "utils" }
cli = { path = "cli"}
core = { path = "core" }
human-panic = "1.0.3"
better-panic = "0.3.0"
log = "0.4.14"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"

[profile.dev]
opt-level=0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level=3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
