[package]
name = "cli"
version = "0.0.0"
description = "CLI interface for globalping-cli"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
core = { path = "../core" }
clap_complete = "3.0"

[dependencies.clap]
version = "3.0.14"
features = ["cargo", "derive"]

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
